# django-rest-testing

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: tests.yml
docs/: Home.md
docs/assets/images/: django-rest-testing-logo.ai
docs/config/: docstring-to-markdown-config.yml  readmeio-config.yml
examples/: middlewares.py  models.py  schemas.py  tests.py  urls.py  views.py
rest_testing/: __init__.py  api_test_case.py  api_view_test_scenario.py
tests/: test_settings.py  test_urls.py
tests/rest_testing/: test_api_test_case.py  test_api_view_test_scenario.py
